# 3D_nonrigid_tricubic_pointcloud_registration

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  cmake-multi-platform.yml  cmake-single-platform.yml  docker-image.yml  vcpkg.txt  vcpkg.yml  vcpkg_ubuntu.sh  vcpkg_windows.ps1
docs/tutorial/: README.md  deformed-bunny.ply  original-bunny.ply  run-nonrigid-icp.sh
matlab-prototype/: compareMatrices.m  conPointToPlaneDistance.m  correspondences.m  create_sliceplot.m  estimateTrafo.m  ptCloudOptrals.m  run_optrals_adjust_3D_prototype.m  translationGrid.m  tricubic_interpolation_A.csv  tricubic_interpolation_invA.csv
matlab-validation/: TCIVoxel.m  tcivoxel_invA.mat  tests.m
src/lib/: correspondences.cpp  correspondences.h  correspondences.hpp  gbpcm_optimization.cpp  gbpcm_optimization.h  gbpcm_optimization.hpp  io_utils.cpp  io_utils.h  io_utils.hpp  ioutils.cpp  ioutils.h  named_column_matrix.hpp  optimization.cpp  optimization.hpp  profiler.hpp  pt_cloud.cpp  pt_cloud.h  pt_cloud.hpp  ptcloud.cpp  ptcloud.h  timer.hpp  translation_grid.cpp  translation_grid.h  translation_grid.hpp  translationgrid.cpp  translationgrid.h
src/prog/: gbpcm.cpp  gbpcm_transform.cpp  nonrigid_icp.cpp  nonrigid_icp_transform.cpp
test/: test-eagle.sh  test-gbpcm.sh  test-mls-rail.sh  test-nordbahn.sh  utils.sh
test/test-eagle/: pcfix.txt  pcmov.txt
test/test-mls-rail/: pcfix.laz  pcmov.laz  pdal-pipeline.json  readme.md
test/test-nordbahn/: pcfix.las  pcfix.ply  pcfix.txt  pcmov.las  pcmov.ply  pcmov.txt
test/testdata/: filter_pointclouds.m  visualize_ptclouds.m
